--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -51,6 +51,7 @@
 		"eslint-plugin-svelte": "^2.36.0",
 		"globals": "^15.0.0",
 		"lucide-svelte": "^0.453.0",
+		"mode-watcher": "^0.4.1",
 		"prettier": "^3.3.2",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-svelte": "^3.2.6",
@@ -59,6 +60,7 @@
 		"svelte": "^5.0.0",
 		"svelte-check": "^4.0.0",
 		"svelte-radix": "^2.0.1",
+		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.9",
@@ -74,7 +76,6 @@
 		"@oslojs/encoding": "^1.1.0",
 		"dayjs": "^1.11.13",
 		"drizzle-orm": "^0.33.0",
-		"mode-watcher": "^0.4.1",
 		"postgres": "^3.4.4",
 		"zod": "^3.23.8"
 	}
