--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -76,6 +76,7 @@
 		"@oslojs/encoding": "^1.1.0",
 		"dayjs": "^1.11.13",
 		"drizzle-orm": "^0.36.1",
+		"echarts": "^5.5.1",
 		"postgres": "^3.4.4",
 		"zod": "^3.23.8"
 	}
