--- a/apps/sveltekit/package.json
+++ b/apps/sveltekit/package.json
@@ -42,6 +42,7 @@
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
 		"@types/eslint": "^9.6.0",
+		"@types/node": "^22.9.0",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "1.0.0-next.58",
 		"clsx": "^2.1.1",
