--- a/apps/sveltekit/package.json
+++ b/apps/sveltekit/package.json
@@ -21,63 +21,64 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^3.2.3",
-		"@internationalized/date": "^3.6.0",
-		"@playwright/test": "^1.49.1",
-		"@storybook/addon-essentials": "^8.4.7",
-		"@storybook/addon-interactions": "^8.4.7",
-		"@storybook/addon-links": "^8.4.7",
+		"@chromatic-com/storybook": "^3.2.4",
+		"@internationalized/date": "^3.7.0",
+		"@playwright/test": "^1.50.0",
+		"@storybook/addon-essentials": "^8.5.1",
+		"@storybook/addon-interactions": "^8.5.1",
+		"@storybook/addon-links": "^8.5.1",
 		"@storybook/addon-svelte-csf": "^4.2.0",
-		"@storybook/blocks": "^8.4.7",
-		"@storybook/svelte": "^8.4.7",
-		"@storybook/sveltekit": "^8.4.7",
-		"@storybook/test": "^8.4.7",
-		"@sveltejs/adapter-auto": "^3.3.1",
+		"@storybook/blocks": "^8.5.1",
+		"@storybook/svelte": "^8.5.1",
+		"@storybook/sveltekit": "^8.5.1",
+		"@storybook/test": "^8.5.1",
+		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/enhanced-img": "^0.4.4",
-		"@sveltejs/kit": "^2.15.1",
+		"@sveltejs/kit": "^2.16.1",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/container-queries": "^0.1.1",
-		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
+		"@tailwindcss/forms": "^0.5.10",
+		"@tailwindcss/typography": "^0.5.16",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.10.2",
+		"@types/node": "^22.10.10",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "1.0.0-next.66",
+		"bits-ui": "1.0.0-next.78",
 		"clsx": "^2.1.1",
-		"drizzle-kit": "^0.30.1",
-		"eslint": "^9.17.0",
-		"eslint-config-prettier": "^9.1.0",
+		"drizzle-kit": "^0.30.2",
+		"eslint": "^9.18.0",
+		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
 		"globals": "^15.14.0",
-		"lucide-svelte": "^0.469.0",
+		"lucide-svelte": "^0.474.0",
 		"mode-watcher": "^0.5.0",
 		"prettier": "^3.4.2",
 		"prettier-plugin-organize-imports": "^4.1.0",
-		"prettier-plugin-svelte": "^3.3.2",
-		"prettier-plugin-tailwindcss": "^0.6.9",
-		"storybook": "^8.4.7",
-		"svelte": "^5.16.0",
-		"svelte-check": "^4.1.1",
+		"prettier-plugin-svelte": "^3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.11",
+		"storybook": "^8.5.1",
+		"svelte": "^5.19.2",
+		"svelte-check": "^4.1.4",
 		"svelte-radix": "^2.0.1",
 		"svelte-sonner": "^0.3.28",
 		"tailwind-merge": "^2.6.0",
-		"tailwind-variants": "^0.3.0",
+		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
-		"typescript": "^5.7.2",
-		"typescript-eslint": "^8.18.2",
-		"vite": "^6.0.6",
-		"vitest": "^2.1.8"
+		"typescript": "^5.7.3",
+		"typescript-eslint": "^8.21.0",
+		"vite": "^6.0.11",
+		"vitest": "^3.0.4"
 	},
 	"dependencies": {
 		"@node-rs/argon2": "^1.8.3",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"dayjs": "^1.11.13",
-		"drizzle-orm": "^0.38.3",
-		"echarts": "^5.5.1",
+		"drizzle-orm": "^0.38.4",
+		"echarts": "^5.6.0",
 		"postgres": "^3.4.5",
-		"uuid": "^11.0.3",
+		"uuid": "^11.0.5",
 		"zod": "^3.24.1"
 	}
 }
