--- a/apps/sveltekit/package.json
+++ b/apps/sveltekit/package.json
@@ -22,42 +22,43 @@
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^3.2.4",
+		"@eslint/js": "^9.21.0",
 		"@internationalized/date": "^3.7.0",
-		"@playwright/test": "^1.50.0",
-		"@storybook/addon-essentials": "^8.5.1",
-		"@storybook/addon-interactions": "^8.5.1",
-		"@storybook/addon-links": "^8.5.1",
+		"@playwright/test": "^1.50.1",
+		"@storybook/addon-essentials": "^8.5.8",
+		"@storybook/addon-interactions": "^8.5.8",
+		"@storybook/addon-links": "^8.5.8",
 		"@storybook/addon-svelte-csf": "^4.2.0",
-		"@storybook/blocks": "^8.5.1",
-		"@storybook/svelte": "^8.5.1",
-		"@storybook/sveltekit": "^8.5.1",
-		"@storybook/test": "^8.5.1",
+		"@storybook/blocks": "^8.5.8",
+		"@storybook/svelte": "^8.5.8",
+		"@storybook/sveltekit": "^8.5.8",
+		"@storybook/test": "^8.5.8",
 		"@sveltejs/adapter-auto": "^4.0.0",
 		"@sveltejs/adapter-node": "^5.2.12",
 		"@sveltejs/enhanced-img": "^0.4.4",
-		"@sveltejs/kit": "^2.16.1",
+		"@sveltejs/kit": "^2.17.2",
 		"@sveltejs/vite-plugin-svelte": "^5.0.3",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.10.10",
+		"@types/node": "^22.13.5",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "1.0.0-next.78",
+		"bits-ui": "1.3.2",
 		"clsx": "^2.1.1",
-		"drizzle-kit": "^0.30.2",
-		"eslint": "^9.18.0",
+		"drizzle-kit": "^0.30.4",
+		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
-		"globals": "^15.14.0",
+		"globals": "^15.15.0",
 		"lucide-svelte": "^0.474.0",
-		"mode-watcher": "^0.5.0",
-		"prettier": "^3.4.2",
+		"mode-watcher": "^0.5.1",
+		"prettier": "^3.5.2",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-svelte": "^3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.11",
-		"storybook": "^8.5.1",
-		"svelte": "^5.19.2",
+		"storybook": "^8.5.8",
+		"svelte": "^5.20.2",
 		"svelte-check": "^4.1.4",
 		"svelte-radix": "^2.0.1",
 		"svelte-sonner": "^0.3.28",
@@ -66,9 +67,9 @@
 		"tailwindcss": "^3.4.17",
 		"tailwindcss-animate": "^1.0.7",
 		"typescript": "^5.7.3",
-		"typescript-eslint": "^8.21.0",
-		"vite": "^6.0.11",
-		"vitest": "^3.0.4"
+		"typescript-eslint": "^8.24.1",
+		"vite": "^6.1.1",
+		"vitest": "^3.0.6"
 	},
 	"dependencies": {
 		"@node-rs/argon2": "^1.8.3",
@@ -78,7 +79,7 @@
 		"drizzle-orm": "^0.38.4",
 		"echarts": "^5.6.0",
 		"postgres": "^3.4.5",
-		"uuid": "^11.0.5",
-		"zod": "^3.24.1"
+		"uuid": "^11.1.0",
+		"zod": "^3.24.2"
 	}
 }
