--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -43,6 +43,7 @@
 		"@tailwindcss/typography": "^0.5.16",
 		"@types/eslint": "^9.6.1",
 		"@types/node": "^22.13.5",
+		"@types/pako": "^2.0.3",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "1.3.2",
 		"clsx": "^2.1.1",
@@ -77,6 +78,7 @@
 		"dayjs": "^1.11.13",
 		"drizzle-orm": "^0.38.4",
 		"echarts": "^5.6.0",
+		"pako": "^2.1.0",
 		"postgres": "^3.4.5",
 		"uuid": "^11.1.0",
 		"zod": "^3.24.2"
