--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -51,6 +51,7 @@
 		"eslint": "^9.21.0",
 		"eslint-config-prettier": "^10.0.1",
 		"eslint-plugin-svelte": "^2.46.1",
+		"formsnap": "^2.0.0",
 		"globals": "^15.15.0",
 		"lucide-svelte": "^0.474.0",
 		"mode-watcher": "^0.5.1",
@@ -62,6 +63,7 @@
 		"svelte": "^5.20.2",
 		"svelte-check": "^4.1.4",
 		"svelte-sonner": "^0.3.28",
+		"sveltekit-superforms": "^2.23.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^0.3.1",
 		"tailwindcss": "^3.4.17",
@@ -69,7 +71,8 @@
 		"typescript": "^5.7.3",
 		"typescript-eslint": "^8.24.1",
 		"vite": "^6.1.1",
-		"vitest": "^3.0.6"
+		"vitest": "^3.0.6",
+		"zod": "^3.24.2"
 	},
 	"dependencies": {
 		"@node-rs/argon2": "^1.8.3",
@@ -78,9 +81,9 @@
 		"dayjs": "^1.11.13",
 		"drizzle-orm": "^0.38.4",
 		"echarts": "^5.6.0",
+		"es-toolkit": "^1.32.0",
 		"pako": "^2.1.0",
 		"postgres": "^3.4.5",
-		"uuid": "^11.1.0",
-		"zod": "^3.24.2"
+		"uuid": "^11.1.0"
 	}
 }
