--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -24,6 +24,7 @@
 		"@chromatic-com/storybook": "^3.2.6",
 		"@eslint/js": "^9.24.0",
 		"@internationalized/date": "^3.7.0",
+		"@lucide/svelte": "^0.487.0",
 		"@playwright/test": "^1.51.1",
 		"@storybook/addon-essentials": "^8.6.12",
 		"@storybook/addon-interactions": "^8.6.12",
@@ -53,7 +54,6 @@
 		"eslint-plugin-svelte": "^3.5.1",
 		"formsnap": "^2.0.1",
 		"globals": "^16.0.0",
-		"lucide-svelte": "^0.487.0",
 		"mode-watcher": "^0.5.1",
 		"prettier": "^3.5.3",
 		"prettier-plugin-organize-imports": "^4.1.0",
