--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -78,6 +78,8 @@
 		"@node-rs/argon2": "^1.8.3",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
+		"@supabase/ssr": "^0.6.1",
+		"@supabase/supabase-js": "^2.49.4",
 		"dayjs": "^1.11.13",
 		"drizzle-orm": "^0.41.0",
 		"echarts": "^5.6.0",
