--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -42,10 +42,10 @@
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
+		"@tailwindcss/vite": "^4.1.8",
 		"@types/eslint": "^9.6.1",
 		"@types/node": "^22.14.0",
 		"@types/pako": "^2.0.3",
-		"autoprefixer": "^10.4.21",
 		"bits-ui": "1.3.19",
 		"clsx": "^2.1.1",
 		"drizzle-kit": "^0.30.6",
@@ -58,7 +58,7 @@
 		"prettier": "^3.5.3",
 		"prettier-plugin-organize-imports": "^4.1.0",
 		"prettier-plugin-svelte": "^3.3.3",
-		"prettier-plugin-tailwindcss": "^0.6.11",
+		"prettier-plugin-tailwindcss": "^0.6.12",
 		"storybook": "^8.6.12",
 		"svelte": "^5.25.12",
 		"svelte-check": "^4.1.5",
@@ -66,8 +66,8 @@
 		"sveltekit-superforms": "^2.24.1",
 		"tailwind-merge": "^2.6.0",
 		"tailwind-variants": "^1.0.0",
-		"tailwindcss": "^3.4.17",
-		"tailwindcss-animate": "^1.0.7",
+		"tailwindcss": "^4.1.8",
+		"tw-animate-css": "^1.3.3",
 		"typescript": "^5.8.3",
 		"typescript-eslint": "^8.29.1",
 		"vite": "^6.2.6",
