--- a/package.json
+++ b/package.json
@@ -4,5 +4,13 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "pnpm --parallel --recursive --filter '*' dev"
+  },
+  "dependencies": {
+    "@lucide/svelte": "^0.511.0",
+    "bits-ui": "^2.4.1",
+    "clsx": "^2.1.1",
+    "svelte-sonner": "^1.0.4",
+    "tailwind-merge": "^3.3.0",
+    "tailwind-variants": "^1.0.0"
   }
 }
