--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -37,7 +37,7 @@
 		"@sveltejs/adapter-auto": "^6.0.1",
 		"@sveltejs/adapter-node": "^5.2.13",
 		"@sveltejs/enhanced-img": "^0.7.0",
-		"@sveltejs/kit": "^2.26.1",
+		"@sveltejs/kit": "^2.27.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
@@ -75,7 +75,15 @@
 		"zod": "^4.0.14"
 	},
 	"dependencies": {
+		"@effect/opentelemetry": "^0.56.1",
+		"@effect/sql-drizzle": "^0.43.0",
+		"@effect/sql-pg": "^0.45.0",
 		"@node-rs/argon2": "^1.8.3",
+		"@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
+		"@opentelemetry/sdk-metrics": "^2.0.1",
+		"@opentelemetry/sdk-trace-base": "^2.0.1",
+		"@opentelemetry/sdk-trace-node": "^2.0.1",
+		"@opentelemetry/sdk-trace-web": "^2.0.1",
 		"@oslojs/crypto": "^1.0.1",
 		"@oslojs/encoding": "^1.1.0",
 		"@supabase/ssr": "^0.6.1",
@@ -83,6 +91,7 @@
 		"dayjs": "^1.11.13",
 		"drizzle-orm": "^0.44.4",
 		"echarts": "^5.6.0",
+		"effect": "^3.17.5",
 		"es-toolkit": "^1.39.8",
 		"pako": "^2.1.0",
 		"postgres": "^3.4.7",
