--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -61,6 +61,7 @@
 		"prettier-plugin-organize-imports": "^4.2.0",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
+		"rollup-plugin-visualizer": "^6.0.3",
 		"storybook": "^9.1.1",
 		"svelte": "^5.38.0",
 		"svelte-check": "^4.3.1",
