--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -17,7 +17,7 @@
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
 		"db:studio": "drizzle-kit studio",
-		"grafana": "docker run -p 3000:3000 -p 4317:4317 -p 4318:4318 --rm -it docker.io/grafana/otel-lgtm",
+		"grafana": "docker run --name my-expenses-grafana -p 3000:3000 -p 4317:4317 -p 4318:4318 --rm -it docker.io/grafana/otel-lgtm",
 		"lint": "eslint . && prettier --check .",
 		"format": "prettier --write ."
 	},
@@ -37,9 +37,9 @@
 		"@storybook/test": "^8.6.14",
 		"@sveltejs/adapter-auto": "^6.1.0",
 		"@sveltejs/adapter-node": "^5.3.1",
-		"@sveltejs/enhanced-img": "^0.7.1",
-		"@sveltejs/kit": "^2.31.1",
-		"@sveltejs/vite-plugin-svelte": "^6.1.2",
+		"@sveltejs/enhanced-img": "^0.8.1",
+		"@sveltejs/kit": "^2.34.0",
+		"@sveltejs/vite-plugin-svelte": "^6.1.3",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/typography": "^0.5.16",
@@ -63,7 +63,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"rollup-plugin-visualizer": "^6.0.3",
 		"storybook": "^9.1.2",
-		"svelte": "^5.38.1",
+		"svelte": "^5.38.2",
 		"svelte-check": "^4.3.1",
 		"svelte-sonner": "^1.0.5",
 		"sveltekit-superforms": "^2.27.1",
@@ -72,29 +72,24 @@
 		"tailwindcss": "^4.1.12",
 		"tw-animate-css": "^1.3.7",
 		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.39.1",
-		"vite": "^7.1.2",
+		"typescript-eslint": "^8.40.0",
+		"vite": "^7.1.3",
 		"vitest": "^3.2.4",
 		"zod": "^4.0.17"
 	},
 	"dependencies": {
-		"@effect/opentelemetry": "^0.56.2",
-		"@effect/sql-drizzle": "^0.43.0",
-		"@effect/sql-pg": "^0.45.0",
-		"@node-rs/argon2": "^1.8.3",
+		"@effect/opentelemetry": "^0.56.4",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.203.0",
 		"@opentelemetry/sdk-metrics": "^2.0.1",
 		"@opentelemetry/sdk-trace-base": "^2.0.1",
 		"@opentelemetry/sdk-trace-node": "^2.0.1",
 		"@opentelemetry/sdk-trace-web": "^2.0.1",
-		"@oslojs/crypto": "^1.0.1",
-		"@oslojs/encoding": "^1.1.0",
 		"@supabase/ssr": "^0.6.1",
 		"@supabase/supabase-js": "^2.55.0",
 		"dayjs": "^1.11.13",
 		"drizzle-orm": "^0.44.4",
 		"echarts": "^6.0.0",
-		"effect": "^3.17.7",
+		"effect": "^3.17.8",
 		"es-toolkit": "^1.39.10",
 		"pako": "^2.1.0",
 		"pg": "^8.16.3",
