--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -23,35 +23,35 @@
 	},
 	"devDependencies": {
 		"@chromatic-com/storybook": "^4.1.1",
-		"@eslint/js": "^9.36.0",
-		"@internationalized/date": "^3.9.0",
+		"@eslint/js": "^9.37.0",
+		"@internationalized/date": "^3.10.0",
 		"@lucide/svelte": "^0.515.0",
-		"@playwright/test": "^1.55.1",
+		"@playwright/test": "^1.56.0",
 		"@storybook/addon-essentials": "^8.6.14",
 		"@storybook/addon-interactions": "^8.6.14",
-		"@storybook/addon-links": "^9.1.8",
-		"@storybook/addon-svelte-csf": "^5.0.8",
+		"@storybook/addon-links": "^9.1.10",
+		"@storybook/addon-svelte-csf": "^5.0.10",
 		"@storybook/blocks": "^8.6.14",
-		"@storybook/svelte": "^9.1.8",
-		"@storybook/sveltekit": "^9.1.8",
+		"@storybook/svelte": "^9.1.10",
+		"@storybook/sveltekit": "^9.1.10",
 		"@storybook/test": "^8.6.14",
-		"@sveltejs/adapter-auto": "^6.1.0",
-		"@sveltejs/adapter-node": "^5.3.2",
-		"@sveltejs/enhanced-img": "^0.8.1",
-		"@sveltejs/kit": "^2.43.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.0",
+		"@sveltejs/adapter-auto": "^6.1.1",
+		"@sveltejs/adapter-node": "^5.3.3",
+		"@sveltejs/enhanced-img": "^0.8.4",
+		"@sveltejs/kit": "^2.46.2",
+		"@sveltejs/vite-plugin-svelte": "^6.2.1",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/typography": "^0.5.18",
-		"@tailwindcss/vite": "^4.1.13",
+		"@tailwindcss/typography": "^0.5.19",
+		"@tailwindcss/vite": "^4.1.14",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.18.6",
+		"@types/node": "^22.18.8",
 		"@types/pako": "^2.0.4",
 		"@types/pg": "^8.15.5",
 		"bits-ui": "2.9.2",
 		"clsx": "^2.1.1",
-		"drizzle-kit": "^0.31.4",
-		"eslint": "^9.36.0",
+		"drizzle-kit": "^0.31.5",
+		"eslint": "^9.37.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.12.4",
 		"formsnap": "^2.0.1",
@@ -61,21 +61,21 @@
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
-		"rollup-plugin-visualizer": "^6.0.3",
-		"storybook": "^9.1.8",
-		"svelte": "^5.39.5",
+		"rollup-plugin-visualizer": "^6.0.4",
+		"storybook": "^9.1.10",
+		"svelte": "^5.39.10",
 		"svelte-check": "^4.3.2",
 		"svelte-sonner": "^1.0.5",
-		"sveltekit-superforms": "^2.27.1",
+		"sveltekit-superforms": "^2.27.2",
 		"tailwind-merge": "^3.3.1",
 		"tailwind-variants": "^1.0.0",
-		"tailwindcss": "^4.1.13",
-		"tw-animate-css": "^1.3.8",
-		"typescript": "^5.9.2",
-		"typescript-eslint": "^8.44.1",
-		"vite": "^7.1.7",
+		"tailwindcss": "^4.1.14",
+		"tw-animate-css": "^1.4.0",
+		"typescript": "^5.9.3",
+		"typescript-eslint": "^8.46.0",
+		"vite": "^7.1.9",
 		"vitest": "^3.2.4",
-		"zod": "^4.1.11"
+		"zod": "^4.1.12"
 	},
 	"dependencies": {
 		"@effect/opentelemetry": "^0.56.6",
@@ -85,12 +85,13 @@
 		"@opentelemetry/sdk-trace-node": "^2.1.0",
 		"@opentelemetry/sdk-trace-web": "^2.1.0",
 		"@supabase/ssr": "^0.7.0",
-		"@supabase/supabase-js": "^2.57.4",
+		"@supabase/supabase-js": "^2.74.0",
 		"dayjs": "^1.11.18",
-		"drizzle-orm": "^0.44.5",
+		"drizzle-orm": "^0.44.6",
 		"echarts": "^6.0.0",
-		"effect": "^3.17.14",
+		"effect": "^3.18.4",
 		"es-toolkit": "^1.39.10",
+		"nuqs-svelte": "^1.2.2",
 		"pako": "^2.1.0",
 		"pg": "^8.16.3",
 		"uuid": "^11.1.0"
