--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "svelte-sonner": "^1.0.4",
     "tailwind-merge": "^3.3.0",
     "tailwind-variants": "^1.0.0"
-  }
+  },
+  "workspaces": [
+    "apps/*"
+  ]
 }
