Add loading state to pages

--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -86,9 +86,11 @@
 		"@opentelemetry/sdk-trace-web": "^2.2.0",
 		"@supabase/ssr": "^0.7.0",
 		"@supabase/supabase-js": "^2.89.0",
-		"@tanstack/db": "^0.5.19",
-		"@tanstack/query-db-collection": "^1.0.15",
-		"@tanstack/svelte-db": "^0.1.62",
+		"@tanstack/db": "^0.5.20",
+		"@tanstack/query-async-storage-persister": "^5.90.21",
+		"@tanstack/query-db-collection": "^1.0.17",
+		"@tanstack/query-persist-client-core": "^5.91.18",
+		"@tanstack/svelte-db": "^0.1.63",
 		"@tanstack/svelte-query": "^6.0.14",
 		"@tanstack/svelte-query-devtools": "^6.0.3",
 		"dayjs": "^1.11.19",
@@ -96,6 +98,7 @@
 		"echarts": "^6.0.0",
 		"effect": "^3.19.13",
 		"es-toolkit": "^1.43.0",
+		"idb-keyval": "^6.2.2",
 		"nuqs-svelte": "^1.2.2",
 		"pako": "^2.1.0",
 		"pg": "^8.16.3",
