--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -24,28 +24,29 @@
 	"devDependencies": {
 		"@chromatic-com/storybook": "^4.1.3",
 		"@eslint/js": "^9.39.2",
+		"@faker-js/faker": "^10.2.0",
 		"@internationalized/date": "^3.10.1",
 		"@lucide/svelte": "^0.561.0",
-		"@playwright/test": "^1.57.0",
+		"@playwright/test": "^1.58.0",
 		"@storybook/addon-essentials": "^8.6.14",
 		"@storybook/addon-interactions": "^8.6.14",
-		"@storybook/addon-links": "^10.1.10",
+		"@storybook/addon-links": "^10.2.0",
 		"@storybook/addon-svelte-csf": "^5.0.10",
 		"@storybook/blocks": "^8.6.14",
-		"@storybook/svelte": "^10.1.10",
-		"@storybook/sveltekit": "^10.1.10",
-		"@storybook/test": "^8.6.14",
+		"@storybook/svelte": "^10.2.0",
+		"@storybook/sveltekit": "^10.2.0",
+		"@storybook/test": "^8.6.15",
 		"@sveltejs/adapter-auto": "^7.0.0",
-		"@sveltejs/adapter-node": "^5.4.0",
+		"@sveltejs/adapter-node": "^5.5.2",
 		"@sveltejs/enhanced-img": "^0.8.5",
-		"@sveltejs/kit": "^2.49.2",
-		"@sveltejs/vite-plugin-svelte": "^6.2.1",
+		"@sveltejs/kit": "^2.50.1",
+		"@sveltejs/vite-plugin-svelte": "^6.2.4",
 		"@tailwindcss/container-queries": "^0.1.1",
 		"@tailwindcss/forms": "^0.5.11",
 		"@tailwindcss/typography": "^0.5.19",
 		"@tailwindcss/vite": "^4.1.18",
 		"@types/eslint": "^9.6.1",
-		"@types/node": "^22.19.3",
+		"@types/node": "^22.19.7",
 		"@types/pako": "^2.0.4",
 		"@types/pg": "^8.16.0",
 		"bits-ui": "2.14.4",
@@ -53,17 +54,17 @@
 		"drizzle-kit": "^0.31.8",
 		"eslint": "^9.39.2",
 		"eslint-config-prettier": "^10.1.8",
-		"eslint-plugin-svelte": "^3.13.1",
+		"eslint-plugin-svelte": "^3.14.0",
 		"formsnap": "^2.0.1",
 		"globals": "^16.5.0",
 		"mode-watcher": "^1.1.0",
-		"prettier": "^3.7.4",
+		"prettier": "^3.8.1",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-svelte": "^3.4.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"rollup-plugin-visualizer": "^6.0.5",
-		"storybook": "^10.1.10",
-		"svelte": "^5.46.1",
+		"storybook": "^10.2.0",
+		"svelte": "^5.48.0",
 		"svelte-check": "^4.3.5",
 		"svelte-sonner": "^1.0.7",
 		"sveltekit-superforms": "^2.29.1",
@@ -72,36 +73,36 @@
 		"tailwindcss": "^4.1.18",
 		"tw-animate-css": "^1.4.0",
 		"typescript": "^5.9.3",
-		"typescript-eslint": "^8.50.1",
-		"vite": "^7.3.0",
-		"vitest": "^4.0.16",
-		"zod": "^4.2.1"
+		"typescript-eslint": "^8.53.1",
+		"vite": "^7.3.1",
+		"vitest": "^4.0.18",
+		"zod": "^4.3.6"
 	},
 	"dependencies": {
 		"@effect/opentelemetry": "^0.58.0",
 		"@opentelemetry/exporter-trace-otlp-http": "^0.207.0",
-		"@opentelemetry/sdk-metrics": "^2.2.0",
-		"@opentelemetry/sdk-trace-base": "^2.2.0",
-		"@opentelemetry/sdk-trace-node": "^2.2.0",
-		"@opentelemetry/sdk-trace-web": "^2.2.0",
+		"@opentelemetry/sdk-metrics": "^2.5.0",
+		"@opentelemetry/sdk-trace-base": "^2.5.0",
+		"@opentelemetry/sdk-trace-node": "^2.5.0",
+		"@opentelemetry/sdk-trace-web": "^2.5.0",
 		"@supabase/ssr": "^0.7.0",
-		"@supabase/supabase-js": "^2.89.0",
-		"@tanstack/db": "^0.5.20",
-		"@tanstack/query-async-storage-persister": "^5.90.21",
-		"@tanstack/query-db-collection": "^1.0.17",
-		"@tanstack/query-persist-client-core": "^5.91.18",
-		"@tanstack/svelte-db": "^0.1.63",
-		"@tanstack/svelte-query": "^6.0.14",
+		"@supabase/supabase-js": "^2.91.1",
+		"@tanstack/db": "^0.5.23",
+		"@tanstack/query-async-storage-persister": "^5.90.22",
+		"@tanstack/query-db-collection": "^1.0.20",
+		"@tanstack/query-persist-client-core": "^5.91.19",
+		"@tanstack/svelte-db": "^0.1.66",
+		"@tanstack/svelte-query": "^6.0.18",
 		"@tanstack/svelte-query-devtools": "^6.0.3",
 		"dayjs": "^1.11.19",
 		"drizzle-orm": "^0.44.7",
 		"echarts": "^6.0.0",
-		"effect": "^3.19.13",
-		"es-toolkit": "^1.43.0",
+		"effect": "^3.19.15",
+		"es-toolkit": "^1.44.0",
 		"idb-keyval": "^6.2.2",
 		"nuqs-svelte": "^1.2.2",
 		"pako": "^2.1.0",
-		"pg": "^8.16.3",
+		"pg": "^8.17.2",
 		"uuid": "^11.1.0"
 	}
 }
