--- a/apps/svelte/package.json
+++ b/apps/svelte/package.json
@@ -13,6 +13,7 @@
 		"test:e2e": "playwright test",
 		"storybook": "storybook dev -p 6006",
 		"build-storybook": "storybook build",
+		"test-storybook": "test-storybook",
 		"db:start": "docker compose up",
 		"db:push": "drizzle-kit push",
 		"db:migrate": "drizzle-kit migrate",
@@ -22,20 +23,18 @@
 		"format": "prettier --write ."
 	},
 	"devDependencies": {
-		"@chromatic-com/storybook": "^4.1.3",
 		"@eslint/js": "^9.39.2",
 		"@faker-js/faker": "^10.2.0",
 		"@internationalized/date": "^3.10.1",
 		"@lucide/svelte": "^0.561.0",
 		"@playwright/test": "^1.58.0",
-		"@storybook/addon-essentials": "^8.6.14",
-		"@storybook/addon-interactions": "^8.6.14",
-		"@storybook/addon-links": "^10.2.0",
+		"@storybook/addon-links": "^10.2.1",
 		"@storybook/addon-svelte-csf": "^5.0.10",
 		"@storybook/blocks": "^8.6.14",
-		"@storybook/svelte": "^10.2.0",
-		"@storybook/sveltekit": "^10.2.0",
+		"@storybook/svelte": "^10.2.1",
+		"@storybook/sveltekit": "^10.2.1",
 		"@storybook/test": "^8.6.15",
+		"@storybook/test-runner": "^0.24.2",
 		"@sveltejs/adapter-auto": "^7.0.0",
 		"@sveltejs/adapter-node": "^5.5.2",
 		"@sveltejs/enhanced-img": "^0.8.5",
@@ -58,12 +57,14 @@
 		"formsnap": "^2.0.1",
 		"globals": "^16.5.0",
 		"mode-watcher": "^1.1.0",
+		"msw": "^2.12.7",
+		"msw-storybook-addon": "^2.0.6",
 		"prettier": "^3.8.1",
 		"prettier-plugin-organize-imports": "^4.3.0",
 		"prettier-plugin-svelte": "^3.4.1",
 		"prettier-plugin-tailwindcss": "^0.7.2",
 		"rollup-plugin-visualizer": "^6.0.5",
-		"storybook": "^10.2.0",
+		"storybook": "^10.2.1",
 		"svelte": "^5.48.0",
 		"svelte-check": "^4.3.5",
 		"svelte-sonner": "^1.0.7",
@@ -76,7 +77,9 @@
 		"typescript-eslint": "^8.53.1",
 		"vite": "^7.3.1",
 		"vitest": "^4.0.18",
-		"zod": "^4.3.6"
+		"zod": "^4.3.6",
+		"eslint-plugin-storybook": "10.2.1",
+		"@storybook/addon-docs": "^10.2.1"
 	},
 	"dependencies": {
 		"@effect/opentelemetry": "^0.58.0",
