--- a/apps/svelte/.env.example
+++ b/apps/svelte/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL="postgres://root:mysecretpassword@localhost:5432/local"
-PUBLIC_SUPABASE_URL="localhost:8000"
+DATABASE_URL="postgres://postgres.your-tenant-id:your-super-secret-and-long-postgres-password@localhost:5432/postgres"
+PUBLIC_SUPABASE_URL="http://localhost:8000"
 PUBLIC_SUPABASE_ANON_KEY=
